2005-09-23  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkcellrendererpixbuf.c (gtk_cell_renderer_pixbuf_finalize):
	unref() pixbuf_expander_{open,closed} to plug memory leak
	N#19667

2005-09-21  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkwidget.c (gtk_widget_real_destroy): removed reference for
	animation iterator
	(init_tap_and_hold_animation): function now creates the animation
	iterator only once
	(gtk_widget_tap_and_hold_setup): set priv->iter to NULL
	N#19195

2005-09-17  Kristian Rietveld  <kris@imendio.com>

	* gtk/gtktreemodelfilter.c (gtk_tree_model_filter_build_level): if
	none of the nodes in the new_level are visible, free the level
	again,
	(gtk_tree_model_filter_row_has_child_toggled): remove FIXME.
	N#19416

2005-09-14  Kristian Rietveld  <kris@imendio.com>

	* gtk/gtktreemodelfilter.c (gtk_tree_model_filter_build_level): don't
	increase zero_ref_count when building the root level.
	(gtk_tree_model_filter_free_level): we should release the filter's
	ref on the child nodes before decreasing the zero ref count (to zero). 

2005-09-14  Kristian Rietveld  <kris@imendio.com>

	* gtk/gtktreemodelfilter.c (gtk_tree_model_filter_build_level),
	(gtk_tree_model_filter_free_level), (gtk_tree_model_filter_row_changed),
	(gtk_tree_model_filter_row_inserted),
	(gtk_tree_model_filter_row_deleted): have the filter model maintain
	a reference on all nodes in the child model which do have a
	parent node (ie not the nodes in the root level). See GNOME
	#311955 for discussion.
	(gtk_tree_model_filter_row_has_child_toggled): remove call
	to _free_level().

	* gtk/gtktreemodelsort.c (gtk_tree_model_sort_row_changed),
	(gtk_tree_model_sort_row_inserted), (gtk_tree_model_sort_row_deleted),
	(gtk_tree_model_sort_ref_node), (gtk_tree_model_sort_unref_node),
	(gtk_tree_model_sort_sort_level), (gtk_tree_model_sort_build_level),
	(gtk_tree_model_sort_free_level): bring back in sync with the